Bug 687290 - pdfwrite generate too large glyphs
Summary: pdfwrite generate too large glyphs
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: All All
: P2 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-02-06 04:05 UTC by Jack Moffitt
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer: 411
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Moffitt 2004-02-06 04:05:31 UTC
The attached file, when processed via CVS HEAD pdfwrite, produces an output pdf
where the glyphs are much too large.  This does not happen when rendering the
original PostScript document.
Comment 1 Jack Moffitt 2004-02-06 04:06:07 UTC
Created attachment 484 [details]
g02.ps
Comment 2 Jack Moffitt 2004-02-10 21:58:36 UTC
Another customer #1110 has also reported a similar bug:
The PostScript file at the end of this e-mail has some text in a
bitmapped font (font included in the PostScript).  If you make a
PDF using GhostScript, it creates a Type 3 font where all the
characters are rendered WAY too big.  Adobe Distiller 5 makes a
good PDF from the same PostScript.

and their analysis:
Suggested fix, if any:
        I've poked around a bit and know why the font is wrong (not how
        to fix it).  The "TheMix" font's BuildChar procedure does a scale
        before the "setcachedevice" call.  This scale factor appears to
        get lost during the conversion to PDF.
                                                                                
        If you edit the resulting PDF and add a "0.08 0 0 0.08 0 0 cm" at
        the start of the "CharProcs" objects' data stream, the PDF renders
        correctly.  This 0.08 factor is the same as the "scale" call in
        the BuildChar proc.
                                                                                
------------------------------------------------------------------------
Other comments:
        Distiller does some VERY different things with this font and the
        Text calls to paint it, but it does produce a Type 3 font and both
        Acrobat and GhostScript render Distiller's PDF correctly.
Comment 3 Jack Moffitt 2004-02-10 22:00:15 UTC
Created attachment 488 [details]
badtype3font.ps

Customer #1110's test file.